app/components/Verse/VerseTracker/VerseTracker.scss
.VerseTracker {
    background-color: rgba(200, 150, 250, 0.4);

    .RM__isPaused
    &,
    .RM__sliderMoving
    & {
        transition: none !important;
    }
}

.VerseTracker__horizontalTransition {
    left: -100%;

    .RM__isPlaying
    &.VerseTracker__selected {
        left: 0;
    }
}

.VerseTracker__verticalTransition {
    top: -100%;

    .RM__isPlaying
    &.VerseTracker__selected {
        top: 0;
    }
}

